# ara_sdk_video

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
Assets/resdata/: res.txt
Assets/resdata/test/: res_sample.txt  ui-main.psd
Assets/videos/: trailer_1080p_nosound.mov
Examples/: CMakeLists.txt
Examples/FFmpeg/: CMakeLists.txt
Examples/FFmpeg/FFmpegAndroidDebug/: CMakeLists.txt  main.cpp
Examples/FFmpeg/FFmpegCameraInput/: CMakeLists.txt  main.cpp
Examples/FFmpeg/FFmpegEncode/: CMakeLists.txt  main.cpp
Examples/FFmpeg/FFmpegMp3Player/: CMakeLists.txt  main.cpp
Examples/FFmpeg/FFmpegReencode/: CMakeLists.txt  main.cpp
Examples/FFmpeg/FFmpegTest/: CMakeLists.txt  main.cpp
Examples/FFmpeg/FFmpegTest_UIApp/: CMakeLists.txt  UIApp.cpp  UIApp.h  VideoView.cpp  VideoView.h  main.cpp
Examples/FFmpeg/FFmpegTranscode/: CMakeLists.txt  main.cpp
Examples/NDI/: CMakeLists.txt
Examples/NDI/NDISenderCameraInput/: CMakeLists.txt  main.cpp
Examples/NDI/NDISimpleReceiver/: CMakeLists.txt  main.cpp
Examples/NDI/NDISimpleTestSender/: CMakeLists.txt  main.cpp  picopng.hpp
Examples/Portaudio/: CMakeLists.txt
Examples/Portaudio/SamplePlayback/: CMakeLists.txt  main.cpp
Examples/Portaudio/SineTest/: CMakeLists.txt  main.cpp
Examples/Realsense2/: CMakeLists.txt
Examples/Realsense2/Realsense_Basic/: CMakeLists.txt  main.cpp
UnitTests/: CMakeLists.txt  RealsenseStartStop.cpp  pch.h
cmake/Modules/: AraAvConfigure.cmake  AraSdkVideo.cmake  AraSdkVideoConfigure.cmake  FindFFMpeg.cmake  FindPortaudio.cmake  FindRealsense2.cmake  ResCompInclude.cmake  VideoInputCopyDependencies.cmake  VideoInputDepInclude.cmake  VideoInputDependencies.cmake
src/: AVCommon.h  CMakeLists.txt  test_class.cpp
src/AudioFile/: AudioFile.cpp  AudioFile.h  AudioFileAiff.cpp  AudioFileAiff.h  AudioFileWav.cpp  AudioFileWav.h  AudioSampleRateConverter.h  PaAudioFile.cpp  PaAudioFile.h  Sample.cpp  Sample.h
src/FFMpeg/: FFMpegAudioFile.cpp  FFMpegAudioFile.h  FFMpegAudioPlayer.cpp  FFMpegAudioPlayer.h  FFMpegCommon.h  FFMpegCustomIOContext.cpp  FFMpegCustomIOContext.h  FFMpegDecode.cpp  FFMpegDecode.h  FFMpegDecodeAudio.cpp  FFMpegDecodeAudio.h  FFMpegDecodeMediaCodec.cpp  FFMpegDecodeMediaCodec.h  FFMpegEncode.cpp  FFMpegEncode.h  FFMpegPlayer.cpp  FFMpegPlayer.h  get_bits.h
src/IntelRealsense/: IntelRealsense.cpp  IntelRealsense.h
src/NDI/: CaptureClient.cpp  CaptureNDI.h  CaptureNDIBuffer.cpp  CaptureNDIGLBuffer.cpp  CaptureNDISource.cpp  CaptureNDISourceScanner.cpp  CaptureNDI_GL.h  GLResNDI.cpp  GLResNDI.h
src/OpenAL/: OpenAL.cpp  OpenAL.h
src/Portaudio/: Portaudio.cpp  Portaudio.h  PortaudioAudioEngine.cpp  PortaudioAudioEngine.h
